--- a/settings.ini
+++ b/settings.ini
@@ -1,7 +1,7 @@
 [example]
 boolexample = 0
 numericexample = 10
-optionsexample = option1
+optionsexample = English
 stringexample = some_string
 pathexample = /some/path
 
